# zeek-lognorm

./: CMakeLists.txt  COPYING  Makefile  README  configure.plugin
cmake/: FindLibFastJSON.cmake  FindLiblognorm.cmake
liblognorm/: CMakeLists.txt  COPYING  README  configure.plugin
liblognorm/cmake/: FindLibJSON-C.cmake  FindLiblognorm.cmake
liblognorm/scripts/: init.bro
liblognorm/scripts/Bro/Lognorm/: main.bro  read_logs.bro  read_syslog.bro
liblognorm/src/: LogNormalizer.cc  LogNormalizer.h  Plugin.cc  Plugin.h  lognorm.bif
liblognorm/tests/: btest.cfg
liblognorm/tests/Baseline/lognorm.show-plugin/: output
liblognorm/tests/lognorm/: basic.bro  read_file.bro  read_syslog.bro  show-plugin.bro
scripts/Bro/Lognorm/: __load__.bro  cluster.bro  main.bro
scripts/lognorm/: __load__.zeek  main.zeek  read_logs.zeek
src/: LogNormalizer.cc  LogNormalizer.h  Plugin.cc  Plugin.h  lognorm.bif
tests/: btest.cfg
tests/Baseline/lognorm.basic/: output
tests/Baseline/lognorm.read_file/: output
tests/Baseline/lognorm.read_syslog/: output
tests/Baseline/scripts.basic/: output
tests/Baseline/scripts.cluster-distribution/: manager-1..stdout  output  worker-1..stdout  worker-2..stdout
tests/Baseline/scripts.read_file/: output
tests/Baseline/scripts.show-plugin/: output
tests/lognorm/: show-plugin.bro
tests/scripts/: basic.zeek  cluster-distribution.bro  read_file.bro  read_file.zeek  read_syslog.zeek  show-plugin.bro  show-plugin.zeek
